SD-2774: Completed scenarios structure